# bride

./: .gitignore  .gitmodules  .travis.yml  README  README.md  stack.xml
bride/: CMakeLists.txt  Makefile  Makefile.tarball  catkin_create_eclipse_package.sh  catmake  download_unpack_build.mk  eclipse-modeling-juno-SR1-linux-gtk-x86_64.tar.gz.md5sum  eclipse-modeling-juno-SR1-linux-gtk.tar.gz.md5sum  eclipse-modeling-juno-SR1-macosx-cocoa-x86_64.tar.gz.md5sum  eclipse-modeling-juno-SR2-linux-gtk-x86_64.tar.gz.md5sum  eclipse-modeling-juno-SR2-linux-gtk.tar.gz.md5sum  eclipse-modeling-juno-SR2-macosx-cocoa-x86_64.tar.gz.md5sum  eclipse-modeling-juno-linux-gtk-x86_64.tar.gz.md5sum  eclipse-modeling-juno-linux-gtk.tar.gz.md5sum  eclipse-modeling-kepler-R-linux-gtk-x86_64.tar.gz.md5sum  eclipse-modeling-kepler-R-linux-gtk.tar.gz.md5sum  eclipse-modeling-kepler-R-macosx-cocoa-x86_64.tar.gz.md5sum  eclipse-modeling-kepler-SR1-linux-gtk-x86_64.tar.gz.md5sum  eclipse-modeling-kepler-SR1-linux-gtk.tar.gz.md5sum  eclipse-modeling-kepler-SR1-macosx-cocoa-x86_64.tar.gz.md5sum  eclipse-modeling-kepler-SR2-linux-gtk-x86_64.tar.gz.md5sum  eclipse-modeling-kepler-SR2-linux-gtk.tar.gz.md5sum  eclipse-modeling-kepler-SR2-macosx-cocoa-x86_64.tar.gz.md5sum  eclipse-modeling-luna-R-linux-gtk-x86_64.tar.gz.md5sum  eclipse-modeling-luna-R-linux-gtk.tar.gz.md5sum  eclipse-modeling-luna-R-macosx-cocoa-x86_64.tar.gz.md5sum  eclipse-modeling-luna-SR1a-linux-gtk-x86_64.tar.gz.md5sum  eclipse-modeling-luna-SR1a-linux-gtk.tar.gz.md5sum  eclipse-modeling-luna-SR1a-macosx-cocoa-x86_64.tar.gz.md5sum  eclipse_plugins.yaml  eclipsefy_catkin_package.sh  installer.py  mainpage.dox  manifest.xml  package.xml  rosaction.py
bride_compilers/: .classpath  .project  CMakeLists.txt  mainpage.dox  manifest.xml  org.eclipse.core.resources.prefs  org.eclipse.jdt.core.prefs  package.xml
bride_compilers/src/: M2CStandalone.java
bride_compilers/src/egl/: configure.egl  package.egl
bride_compilers/src/models/: ros.ecore
bride_plugin_source/: CMakeLists.txt  manifest.xml  package.xml
bride_plugin_source/src/org.best.of.robotics.dsl.smach/: .project  plugin.xml
bride_plugin_source/src/org.best.of.robotics.dsl.smach.sdk/: .project  feature.xml
bride_plugin_source/src/org.best.of.robotics.dsl.smach.tests/: .project  org.best.of.robotics.dsl.smach.tests.launch
bride_plugin_source/src/org.best.of.robotics.dsl.smach.ui/: .project  plugin.xml_gen
bride_plugin_source/src/org.best_of_robotics.bride/: bride.product  build.properties  plugin.xml
bride_plugin_source/src/org.best_of_robotics.bride.cdt.orocos/: .project  plugin.xml
bride_plugin_source/src/org.best_of_robotics.bride.cdt.ros/: plugin.xml
bride_plugin_source/src/org.best_of_robotics.bride.feature.bcm/: .project
bride_plugin_source/src/org.best_of_robotics.bride.feature.orocos/: feature.xml
bride_plugin_source/src/org.best_of_robotics.bride.feature.research/: .project
bride_plugin_source/src/org.best_of_robotics.bride.feature.ros/: feature.xml
bride_plugin_source/src/org.best_of_robotics.bride.ui/: .project  plugin.xml
bride_plugin_source/src/org.best_of_robotics.bride.ui.orocos/: .project
bride_plugin_source/src/org.best_of_robotics.bride.update/: .project
bride_plugin_source/src/org.best_of_robotics.model.bcm/: plugin.xml
bride_plugin_source/src/org.best_of_robotics.model.bcm.diagram/: messages.properties
bride_plugin_source/src/org.best_of_robotics.model.bcm.edit/: .project  plugin.properties  plugin.xml
bride_plugin_source/src/org.best_of_robotics.model.cpf/: plugin.xml
bride_plugin_source/src/org.best_of_robotics.model.cpf.edit/: .project  plugin.properties
bride_plugin_source/src/org.best_of_robotics.model.datatypes.edit/: .project
bride_plugin_source/src/org.best_of_robotics.model.orocos.diagram/: .options  .project  plugin.properties
bride_plugin_source/src/org.best_of_robotics.model.orocos.edit/: plugin.properties  plugin.xml
bride_plugin_source/src/org.best_of_robotics.transform.bcm.to.orocos/: .project  build.properties  plugin.xml
bride_plugin_source/src/org.best_of_robotics.transform.bcmx.to.ros/: .project  plugin.xml
bride_plugin_source/src/org.best_of_robotics.transform.datatypes.typekit/: .project
bride_plugin_source/src/org.best_of_robotics.transform.datatypes.typepgen/: .project
bride_plugin_source/src/org.best_of_robotics.transform.orocos.to.cplusplus/: plugin.xml
bride_plugin_source/src/org.best_of_robotics.transform.ros.to.cplusplus/: .project  plugin.xml
bride_plugin_source/src/org.best_of_robotics.transform.rtt.to.cplusplus/: .project  plugin.xml
bride_plugin_source/src/org.best_of_robotics.transform.smach.to.python/: .project  plugin.xml
bride_plugin_source/src/org.best_of_robotics.transform.sysml_sm.to.smach/: .project  plugin.xml
bride_plugin_source/src/org.bride.wizards/: .project  plugin.xml
bride_plugin_source/src/org.orocos.model.rtt/: plugin.properties
bride_plugin_source/src/org.orocos.model.rtt.diagram/: messages.properties
bride_plugin_source/src/org.orocos.model.rtt.editor/: build.properties  plugin.properties
bride_plugin_source/src/org.orocos.rtt.help/: toc.xml  tocconcepts.xml  tocgettingstarted.xml  tocreference.xml
bride_templates/: .project  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
bride_templates/cpp/: common_nodeSource.egl
bride_templates/launch/: manifest.egl
bride_templates/python/: python_package.egl
bride_templates/system/: cmakelists.egl  launchfile.egl  manifest.egl  package.egl  package_xml.egl
bride_tutorials/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  run.sh  system.launch
bride_tutorials/action/: TriggerPublish.action
bride_tutorials/model/: behaviour.ros_coordinator  behaviour.ros_coordinator_diagram  deployment.ros_system  deployment.ros_system_diagram  listener.ros_package  listener.ros_package_diagram  talker.ros_package  talker.ros_package_diagram
bride_tutorials/msg/: Dummy.msg
bride_tutorials/src/: listener_common.cpp  talker_common.cpp
bride_tutorials/test/: generate_talker_package.py
(+3028 files in other folders)
