<?xml version="1.0"?>
<package>
  <name>bride</name>
  <version>0.3.0</version>
  <description>

     installer.py installs a full eclipse installation in this package. Additionally CDT and the BRIDE plugins will be installed. After rosmake you have the full model driven engineering tool chain accessible inside this package.

  </description>
  <maintainer email="aub@ipa.fraunhofer.de">Alexander Bubeck</maintainer>
  <author email="aub@ipa.fraunhofer.de">Alexander Bubeck</author>
  <license>BSD</license>
  
  <url>http://ros.org/wiki/bride</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospack</build_depend>


</package>


