<package>
  <name>bride_plugin_source</name>
  <version>0.3.0</version>
  <description>Source code for BRICS eclipse plugins.</description>
  <maintainer email="aub@ipa.fhg.de">Alexander Bubeck</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bride_plugin_source</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="aub@ipa.fhg.de">Alexander Bubeck</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>

  </export>
</package>
